force-app/main/default/objects/Product2/fields/CarryoverLimit__c.field-meta.xml
<CustomField>
    <fullName>CarryoverLimit__c</fullName>
    <label>Carryover Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>