force-app/main/default/objects/Product2/fields/CreditCarryoverType__c.field-meta.xml
<CustomField>
    <fullName>CreditCarryoverType__c</fullName>
    <label>Credit Carryover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditCarryoverType</valueSetName>
    </valueSet>
</CustomField>