force-app/main/default/objects/Product2/fields/CreditDistribution__c.field-meta.xml
<CustomField>
    <fullName>CreditDistribution__c</fullName>
    <description>Determines how the total usage is distributed among the usage periods.</description>
    <inlineHelpText>Determines how the total usage is distributed among the usage periods.</inlineHelpText>
    <label>Credit Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CreditCarryoverType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CreditDistribution</valueSetName>
    </valueSet>
</CustomField>