force-app/main/default/objects/Product2/fields/CreditDistributionAmend__c.field-meta.xml
<CustomField>
    <fullName>CreditDistributionAmend__c</fullName>
    <description>Determines how the total usage is distributed among the usage periods when making amendments.</description>
    <inlineHelpText>Determines how the total usage is distributed among the usage periods when making amendments.</inlineHelpText>
    <label>Credit Distribution on Amend</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CreditCarryoverType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CreditDistributionAmend</valueSetName>
    </valueSet>
</CustomField>