force-app/main/default/objects/Product2/fields/UsageTerm__c.field-meta.xml
<CustomField>
    <fullName>UsageTerm__c</fullName>
    <description>Measured in usage periods.
If Credit Carryover = Pool, it represents the pool size.
If Credit Carryover = Rolling, it represents the validity of the credits.</description>
    <inlineHelpText>Measured in usage periods.
If Credit Carryover = Pool, it represents the pool size.
If Credit Carryover = Rolling, it represents the validity of the credits.</inlineHelpText>
    <label>Usage Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>