force-app/main/default/objects/Product2/fields/UsageType__c.field-meta.xml
<CustomField>
    <fullName>UsageType__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UsageType</valueSetName>
    </valueSet>
</CustomField>