force-app/main/default/objects/Product2/validationRules/Require_Subscription_for_Usage_Credits.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Subscription_for_Usage_Credits</fullName>
    <active>true</active>
    <description>For &quot;Usage with Credits&quot; products to work, require that the product be a Subscription</description>
    <errorConditionFormula>AND(

  NOT( ISBLANK(UsageTerm__c) ),

  OR(
    NOT( ISPICKVAL( SBQQ__ChargeType__c, &quot;Recurring&quot; ) ),
    ISBLANK( SBQQ__SubscriptionTerm__c ),
    ISBLANK( TEXT(SBQQ__SubscriptionPricing__c) ),
    ISBLANK( TEXT(SBQQ__BillingFrequency__c) ),
    ISBLANK( TEXT(SBQQ__BillingType__c) )
  )

)</errorConditionFormula>
    <errorMessage>&quot;Usage with Credits&quot; products need to be Subscriptions</errorMessage>
</ValidationRule>