force-app/main/default/objects/Product2/validationRules/RequireSubscription_for_UsageProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireSubscription_for_UsageProducts</fullName>
    <active>false</active>
    <description>For Hybrid Usage products to work, require that the product be of Charge Type = Recurring</description>
    <errorConditionFormula>AND(

  NOT( ISBLANK(UsageTerm__c) ),

  OR(
    NOT( ISPICKVAL( SBQQ__ChargeType__c, &quot;Recurring&quot; ) ),
    ISBLANK( SBQQ__SubscriptionTerm__c ),
    ISBLANK( TEXT(SBQQ__SubscriptionPricing__c) ),
    ISBLANK( TEXT(SBQQ__BillingFrequency__c) ),
    ISBLANK( TEXT(SBQQ__BillingType__c) )
  )

)</errorConditionFormula>
    <errorMessage>Hybrid Usage products need to be of Charge Type = Recurring</errorMessage>
</ValidationRule>