force-app/main/default/objects/Product2/validationRules/UsageTerm_vs_BillingTerm.validationRule-meta.xml
<ValidationRule>
    <fullName>UsageTerm_vs_BillingTerm</fullName>
    <active>false</active>
    <description>The Billing Term must be greater than the Usage Term</description>
    <errorConditionFormula>AND( SBQQ__SubscriptionTerm__c &lt; UsageTerm__c , ISPICKVAL( CreditCarryoverType__c ,&quot;Pool&quot;) )</errorConditionFormula>
    <errorMessage>The Subscription Term must be greater than the Usage Term</errorMessage>
</ValidationRule>