force-app/main/default/objects/Product2/listViews/HybridUsage.listView-meta.xml
<ListView>
    <fullName>HybridUsage</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>UsageType__c</columns>
    <columns>SBQQ__SubscriptionTerm__c</columns>
    <columns>UsageTerm__c</columns>
    <columns>SBQQ__BillingFrequency__c</columns>
    <columns>SBQQ__BillingType__c</columns>
    <columns>CreditCarryoverType__c</columns>
    <columns>CreditDistributionAmend__c</columns>
    <columns>CarryoverFactor__c</columns>
    <columns>CarryoverLimit__c</columns>
    <columns>OverageSurcharge__c</columns>
    <columns>StandardPrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UsageType__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Hybrid Usage</label>
</ListView>